Forgot to create the database

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,6 +89,7 @@ jobs:
           RAILS_ENV: test
         working-directory: redmine
         run: |
+          bundle exec rake db:create
           bundle exec rake db:migrate
           bundle exec rake redmine:plugins:migrate
           rails test plugins/redmine_event_notifier/test
