--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,15 +47,15 @@ jobs:
           ref: ${{ env.REDMINE_VERSION }}
           path: redmine
 
-      - name: Install package dependencies
-        run: >
-          sudo apt-get install --yes --quiet
-          build-essential
-          cmake
-          libicu-dev
-          libpq-dev
-          ghostscript
-          gsfonts
+      # - name: Install package dependencies
+      #   run: >
+      #     sudo apt-get install --yes --quiet
+      #     build-essential
+      #     cmake
+      #     libicu-dev
+      #     libpq-dev
+      #     ghostscript
+      #     gsfonts
 
       - name: Checkout redmine_event_notifier plugin
         uses: actions/checkout@v2
@@ -75,11 +75,6 @@ jobs:
           working-directory: redmine
 
       - run: ruby -v
-
-      # - name: Install Ruby dependencies
-      #   working-directory: redmine
-      #   run: |
-      #     bundle install --jobs=4 --retry=3
 
       - name: Run plugin tests
         env:
