--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,6 @@
 name: CI
 
 env:
-  PLUGIN_NAME: redmine_redis_notifier
-  REDMINE_VERSION: 5.0.2
   RAILS_ENV: test
 
 on:
@@ -14,14 +12,14 @@ on:
 
 jobs:
   test:
-    name: ${{ github.workflow }} ${{ matrix.db }} ruby-${{ matrix.ruby }}
+    name: ${{ github.workflow }} redmine-${{ matrix.version }} ${{ matrix.db }}
     runs-on: ubuntu-latest
 
     strategy:
-      matrix:
-        ruby: ['3.1']
-        db: ['postgres']
       fail-fast: false
+      matrix:
+        version: ['4.2', '5.0']
+        db: ['postgres']
 
     services:
       postgres:
@@ -34,50 +32,27 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 5432:5432
+
+    container:
+      image: redmine:${{ matrix.version }}
+      env:
+        REDMINE_HOME: /usr/src/redmine
+        RAILS_ENV: ${{ env.RAILS_ENV }}
+      volumes:
+        - ${{ github.workspace }}:/usr/src/redmine/plugins
 
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Checkout Redmine
-        uses: actions/checkout@v2
-        with:
-          repository: redmine/redmine
-          ref: ${{ env.REDMINE_VERSION }}
-          path: redmine
-
-      - name: Checkout redmine_redis_notifier plugin
-        uses: actions/checkout@v2
-        with:
-          path: redmine/plugins/${{ env.PLUGIN_NAME }}
-
-      - name: Copy Redmine database config
-        working-directory: redmine
-        run: |
-          cp plugins/redmine_redis_notifier/test/support/database_${{ matrix.db }}.yml config/database.yml
-
-      - name: Setup Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '${{ matrix.ruby }}'
-          bundler-cache: true
-          working-directory: redmine
-
-      - run: ruby -v
-
-      - name: Run plugin tests
-        env:
-          # use localhost for the host here because we have specified a container for the job.
-          # If we were running the job on the VM this would be postgres
-          PGHOST: localhost
-          PGUSER: postgres
-          PGPASSWORD: postgres
-          RAILS_ENV: test
-        working-directory: redmine
-        run: |
-          bundle exec rake db:drop
-          bundle exec rake db:create
-          bundle exec rake db:migrate
-          bundle exec rake redmine:plugins:migrate
-          bundle exec rails test plugins/redmine_redis_notifier/test
+    - uses: actions/checkout@v3
+    - name: Run plugin tests
+      env:
+        # use localhost for the host here because we have specified a container for the job.
+        # If we were running the job on the VM this would be postgres
+        PGHOST: localhost
+        PGUSER: postgres
+        PGPASSWORD: postgres
+        RAILS_ENV: ${{ env.RAILS_ENV }}
+      working-directory: redmine
+      run: |
+        bundle install --with test
+        bundle exec rake db:drop db:create db:migrate redmine:plugins:migrate
+        bundle exec rails test plugins/redmine_redis_notifier/test
