--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,6 @@ jobs:
         RAILS_ENV: ${{ env.RAILS_ENV }}
       working-directory: redmine
       run: |
-        bundle install --with test
-        bundle exec rake db:drop db:create db:migrate redmine:plugins:migrate
-        bundle exec rails test plugins/redmine_redis_notifier/test
+        pwd
+        cd /usr/src/redmine/plugins
+        ls -la
