--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,5 +45,4 @@ jobs:
     steps:
     - name: Test
       run: |
-        echo "$(basename ${GITHUB_REPOSITORY})"
-        echo "${{ github.workspace }}"
+        ls -la ${{ env.REDMINE_HOME }}
