--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,12 @@ jobs:
       image: redmine:${{ matrix.version }}
 
     steps:
+      - name: Checkout redmine_redis_notifier plugin
+        uses: actions/checkout@v2
+        with:
+          path: ${{ env.REDMINE_HOME }}/plugins/$(basename ${GITHUB_REPOSITORY})
+
     - name: Test
       run: |
+        echo "${{ env.REDMINE_HOME }}/plugins/$(basename ${GITHUB_REPOSITORY})"
         ls -la ${{ env.REDMINE_HOME }}/plugins
