--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,8 +43,33 @@ jobs:
       image: redmine:${{ matrix.version }}
 
     steps:
-    - name: Test
+    - name: Install essential
+      run: apt-get update && apt-get install -y build-essential
+
+    - name: Create database.yml (PostgreSQL)
+      run: |
+        cat > config/database.yml <<EOF
+        test:
+          adapter: "postgresql"
+          host: "postgres"
+          port: 5432
+          username: "${{ env.POSTGRES_USER }}"
+          password: "${{ env.POSTGRES_PASSWORD }}"
+          database: "redmine"
+          encoding: "utf8"
+        EOF
+
+    - name: Copy plugin
       run: |
         cd plugins
         ln -s ${{ github.workspace }} $(basename ${GITHUB_REPOSITORY})
         ls -la
+
+    - name: Setup environment
+      run: |
+        bundle install
+        bundle exec rake db:drop db:create db:migrate redmine:plugins:migrate
+
+    - name: Run plugin tests
+      run: |
+        bundle exec rails test plugins/redmine_redis_notifier/test
