--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,7 @@ jobs:
 
     - name: Copy plugin
       run: |
-        cd plugins
-        ln -s ${{ github.workspace }} $(basename ${GITHUB_REPOSITORY})
+        ln -s ${{ github.workspace }} plugins/$(basename ${GITHUB_REPOSITORY})
         ls -la
 
     - name: Setup environment
@@ -77,5 +76,4 @@ jobs:
     - name: Setup environment
       run: |
         pwd
-        cd plugins
-        ls -la
+        cd plugins/$(basename ${GITHUB_REPOSITORY})
