--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
 
     container:
       image: redmine:${{ matrix.version }}
+      options: -v ${{ github.workspace }}:${{ env.REDMINE_HOME }}/plugins
 
     steps:
     - uses: actions/checkout@v3
@@ -62,13 +63,10 @@ jobs:
 
     - name: Copy plugin
       run: |
-        # cd plugins
+        cd plugins
+        ls -la
         # cp -a ${{ github.workspace }}/ $(basename ${GITHUB_REPOSITORY})
         # ls -la ${{ github.workspace }}
-        pwd
-        cd $GITHUB_WORKSPACE
-        pwd
-        ls -la
 
     # - name: Setup environment
     #   run: |
