--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
     container:
       image: redmine:${{ matrix.version }}
-      options: -v ${{ github.workspace }}:/usr/src/redmine/plugins/$(basename ${GITHUB_REPOSITORY})
+      options: -v ${{ github.workspace }}:/usr/src/redmine/plugins/redmine_redis_notifier
 
     steps:
     - uses: actions/checkout@v3
