--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
 
     container:
       image: redmine:${{ matrix.version }}
-      options: -v ${{ github.workspace }}:/usr/src/redmine/plugins/redmine_redis_notifier
+      volumes:
+        - ${{ github.workspace }}:${{ env.REDMINE_HOME }}/plugins/$(basename ${GITHUB_REPOSITORY})
 
     steps:
     - uses: actions/checkout@v3
