--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,11 @@ jobs:
     container:
       image: redmine:${{ matrix.version }}
       volumes:
-        - ${{ github.workspace }}:/usr/src/redmine/plugins/$(basename ${GITHUB_REPOSITORY})
+        - ${{ github.workspace }}:/usr/src/redmine/plugins/redmine_redis_notifier
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Install essential
       run: apt-get update && apt-get install -y build-essential
 
@@ -66,8 +67,8 @@ jobs:
       run: |
         cd plugins
         ls -la
-        # cp -a ${{ github.workspace }}/ $(basename ${GITHUB_REPOSITORY})
-        # ls -la ${{ github.workspace }}
+        cd $(basename ${GITHUB_REPOSITORY})
+        ls -la
 
     # - name: Setup environment
     #   run: |
