--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [4.2.7, 5.0.2]
+        version: [3.4.13, 4.2.7, 5.0.2]
         db: [postgres]
 
     services:
