try new setup to remove directory name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,32 +42,38 @@ jobs:
     container:
       image: redmine:${{ matrix.version }}
       volumes:
-        - ${{ github.workspace }}:/usr/src/redmine/plugins/redmine_redis_notifier
+        - ${{ github.workspace }}:/usr/src/redmine/plugins/${{ github.event.repository.name }}
 
     steps:
     - uses: actions/checkout@v3
 
-    - name: Install essential
-      run: apt-get update && apt-get install -y build-essential
-
-    - name: Create database.yml (PostgreSQL)
+    - name: Check
       run: |
-        cat > config/database.yml <<EOF
-        test:
-          adapter: postgresql
-          host: postgres
-          port: 5432
-          username: <%= ENV["POSTGRES_USER"] %>
-          password: <%= ENV["POSTGRES_PASSWORD"] %>
-          database: "redmine"
-          encoding: "utf8"
-        EOF
+        ls -la
+        cd plugins
+        ls -la
 
-    - name: Setup environment
-      run: |
-        bundle install --with test
-        bundle exec rake db:drop db:create db:migrate redmine:plugins:migrate
+    # - name: Install essential
+    #   run: apt-get update && apt-get install -y build-essential
 
-    - name: Run plugin tests
-      run: |
-        bundle exec rails test plugins/redmine_redis_notifier/test
+    # - name: Create database.yml (PostgreSQL)
+    #   run: |
+    #     cat > config/database.yml <<EOF
+    #     test:
+    #       adapter: postgresql
+    #       host: postgres
+    #       port: 5432
+    #       username: <%= ENV["POSTGRES_USER"] %>
+    #       password: <%= ENV["POSTGRES_PASSWORD"] %>
+    #       database: "redmine"
+    #       encoding: "utf8"
+    #     EOF
+
+    # - name: Setup environment
+    #   run: |
+    #     bundle install --with test
+    #     bundle exec rake db:drop db:create db:migrate redmine:plugins:migrate
+
+    # - name: Run plugin tests
+    #   run: |
+    #     bundle exec rails test plugins/redmine_redis_notifier/test
